--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
                     <div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
                         <h2 class="title-font font-semibold text-gray-900 tracking-widest text-xs">EMAIL</h2>
                         <a class="text-pink-500 leading-relaxed">ankit.p.samrat@email.com</a>
+                        <a class="text-pink-500 leading-relaxed">ankit.p.samrat@gmail.com</a>
                         <h2 class="title-font font-semibold text-gray-900 tracking-widest text-xs mt-4">PHONE</h2>
                         <p class="leading-relaxed">7523878181</p>
                     </div>
