--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                 <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-8 mb-6"></span>
                 <h2 class="text-blue-900 font-medium title-font tracking-wider text-lg">Ankit Pratap Samrat</h2>
                 <p class="text-gray-500">Web & App Develope</p>
+                <p class="text-gray-500">Web & App Developer</p>
             </div>
         </div>
     </section>
