--- a/about.html
+++ b/about.html
@@ -63,7 +63,8 @@
                             </path>
                         </svg>
                         <p class="leading-relaxed mb-6">I always love to learn new technologies & keep improving my
-                            skills. Other than coding I love travelling, swimming, <br>playing pubg, watching movies, watching comedy
+                            skills. Other than coding I love travelling, swimming, <br>playing pubg, watching movies,
+                            watching comedy
                             shows,<br> singing song & helping others in the community. I am also a strong believer
                             of Financial Independence. I have already started working on products that will make
                             that happen.</p>
