--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
             <div
                 class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-                <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-900">ANKIT PRATAP SAMRAT
+                <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-900">Ankit Pratap Samrat
                 </h1>
                 <p class="mb-10 leading-relaxed">Hi ! This is the Ankit Pratap Samrat. I am a BCA student, learner &
                     coder. I want to became a skilled Web & App Developer.</p>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="lg:max-w-md lg:w-full md:w-1/2 w-5/6">
-                <img class="object-cover object-center rounded" alt="hero" src="my pic.jpg">
+                <img class="object-cover object-center rounded" alt="hero" src="my pic.png">
             </div>
         </div>
     </section>
@@ -68,7 +68,7 @@
                     </div>
                     <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
                         <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Education</h2>
-                        <p class="leading-relaxed">BCA at Mahatma Gandhi Kashi Vidhyapith. <br>Varanasi, Uttar Pradesh,
+                        <p class="leading-relaxed">BCA at Mahatma Gandhi Kashi Vidhyapith (2019-22) <br>Varanasi, Uttar Pradesh,
                             India.</p>
                     </div>
                 </div>
