--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
 </head>
 
 <body>
-    <header class="text-gray-600 body-font">
-        <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-            <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
-                    stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full"
-                    viewBox="0 0 24 24">
-                    <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-                </svg>
-                <span class="ml-3 text-xl">SAMRAT</span>
-            </a>
-            <nav
-                class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
-                <a class="mr-5 hover:text-gray-900">HOME</a>
-                <a class="mr-5 hover:text-gray-900" href="about.html">ABOUT</a>
-                <a class="mr-5 hover:text-gray-900" href="contact.html">CONTACT</a>
-            </nav>
+    <div class=" w-full z-10 sticky bg-white top-0 border-b border-grey-light">
+        <div class="w-full flex flex-wrap items-center lg:justify-between mt-0 py-4 justify-center">
+            <div class=" mx-0 px-0 lg:pl-4 flex items-center lg:mx-4">
+                <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+                    <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
+                            stroke-linejoin="round" stroke-width="2"
+                            class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
+                            <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+                        </svg>
+                        <span class="ml-3 text-xl">SAMRAT</span>
+                    </a>
+                    <nav
+                        class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
+                        <a class="mr-5 hover:text-gray-900">HOME</a>
+                        <a class="mr-5 hover:text-gray-900" href="about.html">ABOUT</a>
+                        <a class="mr-5 hover:text-gray-900" href="contact.html">CONTACT</a>
+                    </nav>
+                </div>
+            </div>
         </div>
-    </header>
+    </div>
     <hr>
     <section class="text-gray-600 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
@@ -39,8 +43,9 @@
                     coder. I want to became a skilled Web & App Developer.</p>
                 <div class="flex justify-center">
                     <button
-                        class="inline-flex text-white bg-indigo-500 border-0 py-1 px-4 focus:outline-none hover:bg-indigo-600 rounded text-lg">Download
-                        Cv</button>
+                        class="inline-flex text-white bg-indigo-500 border-0 py-1 px-4 focus:outline-none hover:bg-indigo-600 rounded text-lg">
+                        <a href="project.html">View Project</a>
+                    </button>
                 </div>
             </div>
             <div class="lg:max-w-md lg:w-full md:w-1/2 w-5/6">
@@ -55,9 +60,6 @@
                 <div class="h-full w-6 absolute inset-0 flex items-center justify-center">
                     <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
                 </div>
-                <div
-                    class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-pink-500 text-white relative z-10 title-font font-medium text-sm">
-                    1</div>
                 <div class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row">
                     <div
                         class="flex-shrink-0 w-24 h-24 bg-pink-100 text-pink-500 rounded-full inline-flex items-center justify-center">
@@ -68,7 +70,9 @@
                     </div>
                     <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
                         <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Education</h2>
-                        <p class="leading-relaxed">BCA at Mahatma Gandhi Kashi Vidhyapith (2019-22) <br>Varanasi, Uttar Pradesh,
+                        <p class="leading-relaxed">BCA at Mahatma Gandhi Kashi Vidhyapith (2019-22) <br>Varanasi,
+                            Uttar
+                            Pradesh,
                             India.</p>
                     </div>
                 </div>
@@ -77,9 +81,6 @@
                 <div class="h-full w-6 absolute inset-0 flex items-center justify-center">
                     <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
                 </div>
-                <div
-                    class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-pink-500 text-white relative z-10 title-font font-medium text-sm">
-                    2</div>
                 <div class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row">
                     <div
                         class="flex-shrink-0 w-24 h-24 bg-pink-100 text-pink-500 rounded-full inline-flex items-center justify-center">
@@ -99,9 +100,6 @@
                 <div class="h-full w-6 absolute inset-0 flex items-center justify-center">
                     <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
                 </div>
-                <div
-                    class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-pink-500 text-white relative z-10 title-font font-medium text-sm">
-                    3</div>
                 <div class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row">
                     <div
                         class="flex-shrink-0 w-24 h-24 bg-pink-100 text-pink-500 rounded-full inline-flex items-center justify-center">
@@ -121,9 +119,6 @@
                 <div class="h-full w-6 absolute inset-0 flex items-center justify-center">
                     <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
                 </div>
-                <div
-                    class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-pink-500 text-white relative z-10 title-font font-medium text-sm">
-                    4</div>
                 <div class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row">
                     <div
                         class="flex-shrink-0 w-24 h-24 bg-pink-100 text-pink-500 rounded-full inline-flex items-center justify-center">
@@ -151,9 +146,12 @@
                         d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z">
                     </path>
                 </svg>
-                <p class="leading-relaxed text-lg">I want to give a special thanks to my teacher. who taught me lots of
-                    knowledge, behaviour & guiding me, on my every step. Teachers do so much for me, and they deserve
-                    all the gratitude. I want to also give a special thanks to my faimly , younger brother & my lovely
+                <p class="leading-relaxed text-lg">I want to give a special thanks to my teacher. who taught me lots
+                    of
+                    knowledge, behaviour & guiding me, on my every step. Teachers do so much for me, and they
+                    deserve
+                    all the gratitude. I want to also give a special thanks to my faimly , younger brother & my
+                    lovely
                     friend. Who also taught me lots of knowledge & also supported me & encouraged me.</p>
                 <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-8 mb-6"></span>
                 <h2 class="text-blue-900 font-medium title-font tracking-wider text-lg">Ankit Pratap Samrat</h2>
