--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                         <h2 class="title-font font-semibold text-gray-900 tracking-widest text-xs">EMAIL</h2>
                         <a class="text-pink-500 leading-relaxed">ankit.p.samrat@gmail.com</a>
                         <h2 class="title-font font-semibold text-gray-900 tracking-widest text-xs mt-4">PHONE</h2>
-                        <p class="leading-relaxed">7523878181</p>
+                        <p class="leading-relaxed">**********</p>
                     </div>
                 </div>
             </div>
