--- a/project.html
+++ b/project.html
@@ -40,8 +40,8 @@
                     <div class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col">
                         <div class="flex-grow">
                             <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Web Calculator</h2>
-                            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar
-                                toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+                            <p class="leading-relaxed text-base">I have created a free and online web calculator. In
+                                which you can do division, multiplication, addition, subtraction, and more.</p>
                             <a class="mt-3 text-pink-500 inline-flex items-center"
                                 href="https://ankitpsamrat.github.io/calculator.github.io/" target="blank">View More
                                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
@@ -56,8 +56,8 @@
                     <div class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col">
                         <div class="flex-grow">
                             <h2 class="text-gray-900 text-lg title-font font-medium mb-3">World Weather</h2>
-                            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar
-                                toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+                            <p class="leading-relaxed text-base">I have created a free and online world weather website.
+                                In which you can see the temperature of any country in the world.</p>
                             <a class="mt-3 text-pink-500 inline-flex items-center">Learn More
                                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                     stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -71,3 +71,5 @@
         </div>
     </section>
 </body>
+
+</html>
