--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class=" w-full z-10 sticky bg-white top-0 border-b border-grey-light">
-        <div class="w-full flex flex-wrap items-center lg:justify-between mt-0 py-4 justify-center">
+        <div class="w-full flex flex-wrap items-center lg:justify-between mt-0 py-0 justify-center">
             <div class=" mx-0 px-0 lg:pl-4 flex items-center lg:mx-4">
                 <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                     <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
@@ -55,10 +55,11 @@
                 <div class="p-4 lg:w-1/2 md:w-full">
                     <div class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col">
                         <div class="flex-grow">
-                            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">World Weather</h2>
-                            <p class="leading-relaxed text-base">I have created a free and online world weather website.
-                                In which you can see the temperature of any country in the world.</p>
-                            <a class="mt-3 text-pink-500 inline-flex items-center">Learn More
+                            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">My Shop</h2>
+                            <p class="leading-relaxed text-base">I have created a shop website.
+                                In which you can see the electronic gadgets.</p>
+                            <a class="mt-3 text-pink-500 inline-flex items-center"
+                                href="https://ankitpsamrat.github.io/My-Shop/" target="blank">View More
                                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                     stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                     <path d="M5 12h14M12 5l7 7-7 7"></path>
