--- a/project.html
+++ b/project.html
@@ -84,6 +84,24 @@
                         </div>
                     </div>
                 </div>
+                <div class="p-4 lg:w-1/2 md:w-full">
+                    <div class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col">
+                        <div class="flex-grow">
+                            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Calculator App</h2>
+                            <p class="leading-relaxed text-base">I have created a calculator app. You can download apk
+                                through the given below link and try it on your
+                                android device.</p>
+                            <a class="mt-3 text-pink-500 inline-flex items-center"
+                                href="https://drive.google.com/file/d/12yRZbuHMNxfMvhhidlItgNUPXSQ-yt8O/view?usp=sharing"
+                                target="blank">Download apk
+                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
