--- a/contact.html
+++ b/contact.html
@@ -56,24 +56,29 @@
             </div>
             <div class="lg:w-1/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
                 <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Feedback</h2>
-                <p class="leading-relaxed mb-5 text-gray-600">Please give feedback.</p>
-                <div class="relative mb-4">
+                <p class="leading-relaxed mb-5 text-gray-600">“Hi dear ! , It was great to seeing you today. Would you
+                    take one minute to leave a feedback about your experience? Your feedback
+                    makes us better day by day and gives motivation that we can do better.”</p>
+                <!-- <div class="relative mb-4">
                     <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
                     <input type="text" id="name" name="name"
                         class="w-full bg-white rounded border border-gray-300 focus:border-pink-500 focus:ring-2 focus:ring-pink-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-                </div>
-                <div class="relative mb-4">
+                </div> -->
+                <!-- <div class="relative mb-4">
                     <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
                     <input type="email" id="email" name="email"
                         class="w-full bg-white rounded border border-gray-300 focus:border-pink-500 focus:ring-2 focus:ring-pink-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-                </div>
-                <div class="relative mb-4">
+                </div> -->
+                <!-- <div class="relative mb-4">
                     <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
                     <textarea id="message" name="message"
                         class="w-full bg-white rounded border border-gray-300 focus:border-pink-500 focus:ring-2 focus:ring-pink-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
-                </div>
+                </div> -->
                 <button
-                    class="text-white bg-pink-500 border-0 py-2 px-6 focus:outline-none hover:bg-pink-600 rounded text-lg">Submit</button>
+                    class="text-white bg-pink-500 border-0 py-2 px-6 focus:outline-none hover:bg-pink-600 rounded text-lg"><a
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSd59xjoO7vc-FYztkvbbMZqn0YUEjdKnHB1V1SpnK6_AU87lw/viewform?usp=sf_link">click
+                        for feedback</a>
+                </button>
             </div>
         </div>
     </section>
