--- a/project.html
+++ b/project.html
@@ -43,7 +43,7 @@
                             <p class="leading-relaxed text-base">I have created a free and online web calculator. In
                                 which you can do division, multiplication, addition, subtraction, and more.</p>
                             <a class="mt-3 text-pink-500 inline-flex items-center"
-                                href="https://ankitpsamrat.github.io/Web-Calculator/" target="blank">View More
+                                href="https://web-calculatorr.netlify.app" target="blank">View More
                                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                     stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                     <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -59,7 +59,7 @@
                             <p class="leading-relaxed text-base">I have created a shop website.
                                 In which you can see the electronic gadgets.</p>
                             <a class="mt-3 text-pink-500 inline-flex items-center"
-                                href="https://ankitpsamrat.github.io/My-Shop/" target="blank">View More
+                                href="https://gopal-electronic.netlify.app" target="blank">View More
                                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                     stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                     <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -75,7 +75,7 @@
                             <p class="leading-relaxed text-base">I have created a ToDo List website.
                                 In which you can add and delete ToDo very easily.</p>
                             <a class="mt-3 text-pink-500 inline-flex items-center"
-                                href="https://ankitpsamrat.github.io/ToDo-List/" target="blank">View More
+                                href="https://web-t0d0.netlify.app" target="blank">View More
                                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                     stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                     <path d="M5 12h14M12 5l7 7-7 7"></path>
