--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     </div>
                     <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
                         <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Knowledge</h2>
-                        <p class="leading-relaxed"> C , C++ , Data Structures , Java , Javascript <br>Html , CSS ,
-                            Bootstrap</p>
+                        <p class="leading-relaxed"> C, C++, Java, Javascript, Dart, Flutter,<br> Firebase, Mysql, HTML,
+                            CSS</p>
                     </div>
                 </div>
             </div>
