--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
                 <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-900">Ankit Pratap Samrat
                 </h1>
-                <p class="mb-10 leading-relaxed">Hi ! This is the Ankit Pratap Samrat. I am a BCA student, learner &
-                    coder. I want to became a skilled Web & App Developer.</p>
+                <p class="mb-10 leading-relaxed">Hi ! This is the Ankit Pratap Samrat. I am a software developer, learner &
+                    coder.</p>
                 <div class="flex justify-center">
                     <button
                         class="inline-flex text-white bg-indigo-500 border-0 py-1 px-4 focus:outline-none hover:bg-indigo-600 rounded text-lg">
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="lg:max-w-md lg:w-full md:w-1/2 w-5/6">
-                <img class="object-cover object-center rounded" alt="hero" src="my pic.png">
+                <img class="object-cover object-center rounded" alt="hero" src="my pic.jpg">
             </div>
         </div>
     </section>
@@ -70,7 +70,7 @@
                     </div>
                     <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
                         <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Education</h2>
-                        <p class="leading-relaxed">BCA at Mahatma Gandhi Kashi Vidhyapith (2019-22) <br>Varanasi,
+                        <p class="leading-relaxed">I have completed my BCA from Mahatma Gandhi Kashi Vidyapith(2019-22). <br>Varanasi,
                             Uttar
                             Pradesh,
                             India.</p>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
                         <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Knowledge</h2>
-                        <p class="leading-relaxed"> C, C++, Java, Javascript, Dart, Flutter,<br> Firebase, Mysql, HTML,
+                        <p class="leading-relaxed"> C, C++, Java, Dart, Flutter,<br> Firebase, Mysql, HTML,
                             CSS</p>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                     </div>
                     <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
                         <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Operating System</h2>
-                        <p class="leading-relaxed">IOS , Windows , Linux , Andriod</p>
+                        <p class="leading-relaxed">Andriod, Windows, IOS, Linux</p>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
                         <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Cloud & Hosting</h2>
-                        <p class="leading-relaxed">Github , Heroku , Aws , Google </p>
+                        <p class="leading-relaxed">Git, Github, Bitbucket, Netlify</p>
                     </div>
                 </div>
             </div>
@@ -146,16 +146,15 @@
                         d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z">
                     </path>
                 </svg>
-                <p class="leading-relaxed text-lg">I want to give a special thanks to my teacher. who taught me lots
+                <p class="leading-relaxed text-lg">I want to give a special thanks to my teachers who taught me lots
                     of
                     knowledge, behaviour & guiding me, on my every step. Teachers do so much for me, and they
                     deserve
-                    all the gratitude. I want to also give a special thanks to my faimly , younger brother & my
-                    lovely
-                    friend. Who also taught me lots of knowledge & also supported me & encouraged me.</p>
+                    all the gratitude. I want to also give a special thanks to my family, younger brother & my
+                    friends. Who also taught me lots of knowledge & also supported me & encouraged me.</p>
                 <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-8 mb-6"></span>
                 <h2 class="text-blue-900 font-medium title-font tracking-wider text-lg">Ankit Pratap Samrat</h2>
-                <p class="text-gray-500">Web & App Developer</p>
+                <p class="text-gray-500">Software Developer</p>
             </div>
         </div>
     </section>
