--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                         <a class="inline-flex items-center">
                             <span class="flex-grow flex flex-col pl-4">
                                 <span class="title-font font-medium text-gray-900">Ankit Pratap Samrat</span>
-                                <span class="text-gray-500 text-sm">Software Developer</span>
+                                <span class="text-gray-500 text-sm">Software Engineer</span>
                             </span>
                         </a>
                     </div>
@@ -74,7 +74,7 @@
                         <a class="inline-flex items-center">
                             <span class="flex-grow flex flex-col pl-4">
                                 <span class="title-font font-medium text-gray-900">Ankit Pratap Samrat</span>
-                                <span class="text-gray-500 text-sm">Software Developer</span>
+                                <span class="text-gray-500 text-sm">Software Engineer</span>
                             </span>
                         </a>
                     </div>
