--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
                 class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
                 <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-900">Ankit Pratap Samrat
                 </h1>
-                <p class="mb-10 leading-relaxed">Hi ! This is the Ankit Pratap Samrat. I am a software developer, learner &
-                    coder.</p>
+                <p class="mb-10 leading-relaxed">Hi! I am a software engineer, learner & coder. currently, I am working at benefix as a software developer.</p>
                 <div class="flex justify-center">
-                    <button
+                    <!-- <button
                         class="inline-flex text-white bg-indigo-500 border-0 py-1 px-4 focus:outline-none hover:bg-indigo-600 rounded text-lg">
                         <a href="project.html">View Project</a>
-                    </button>
+                    </button> -->
                 </div>
             </div>
             <div class="lg:max-w-md lg:w-full md:w-1/2 w-5/6">
@@ -70,7 +69,7 @@
                     </div>
                     <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
                         <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Education</h2>
-                        <p class="leading-relaxed">I have completed my BCA from Mahatma Gandhi Kashi Vidyapith(2019-22). <br>Varanasi,
+                        <p class="leading-relaxed">BCA from Mahatma Gandhi Kashi Vidyapith(2019-22). <br>Varanasi,
                             Uttar
                             Pradesh,
                             India.</p>
@@ -91,8 +90,7 @@
                     </div>
                     <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
                         <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Knowledge</h2>
-                        <p class="leading-relaxed"> C, C++, Java, Dart, Flutter,<br> Firebase, Mysql, HTML,
-                            CSS</p>
+                        <p class="leading-relaxed">Flutter, Dart, Java, Firebase<br>Mysql, HTML, CSS</p>
                     </div>
                 </div>
             </div>
@@ -130,7 +128,7 @@
                     </div>
                     <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
                         <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Cloud & Hosting</h2>
-                        <p class="leading-relaxed">Git, Github, Bitbucket, Netlify</p>
+                        <p class="leading-relaxed">Git, Github, Jira, Bitbucket, Netlify</p>
                     </div>
                 </div>
             </div>
@@ -154,7 +152,7 @@
                     friends. Who also taught me lots of knowledge & also supported me & encouraged me.</p>
                 <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-8 mb-6"></span>
                 <h2 class="text-blue-900 font-medium title-font tracking-wider text-lg">Ankit Pratap Samrat</h2>
-                <p class="text-gray-500">Software Developer</p>
+                <p class="text-gray-500">Software Engineer</p>
             </div>
         </div>
     </section>
