--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
                 <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-900">Ankit Pratap Samrat
                 </h1>
-                <p class="mb-10 leading-relaxed">Hi! I am a software engineer, learner & coder. currently, I am working at benefix as a software developer.</p>
+                <p class="mb-10 leading-relaxed">Hi! I am a software engineer, learner & coder. currently, I am working at benny as a software developer.</p>
                 <div class="flex justify-center">
                     <!-- <button
                         class="inline-flex text-white bg-indigo-500 border-0 py-1 px-4 focus:outline-none hover:bg-indigo-600 rounded text-lg">
