--- a/index.html
+++ b/index.html
@@ -40,8 +40,14 @@
                 <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-900">Ankit Pratap Samrat
                 </h1>
                 <p class="mb-10 leading-relaxed">Hi! I am a software engineer, learner & coder. currently, I am working
-                    at benny as a software developer.</p>
-                <div class="flex justify-center">
+                    at <a href="https://www.bennysave.com/" style="color: blue; text-decoration: underline;"
+                        target="_blank">benny</a>
+
+                    <!-- <a href=https://ankitpsamrat.netlify.app/" style="color: blue; text-decoration: underline; "
+                        target="_blank></a>  -->
+                    as a software developer.
+                </p>
+                <div class=" flex justify-center">
                     <!-- <button
                         class="inline-flex text-white bg-indigo-500 border-0 py-1 px-4 focus:outline-none hover:bg-indigo-600 rounded text-lg">
                         <a href="project.html">View Project</a>
