--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                 </svg>
                 <p class="leading-relaxed text-lg">I extend my heartfelt thanks to the exceptional teachers who have
                     been instrumental in shaping both my knowledge and character. Their guidance has played a pivotal
-                    role in my growth, and I am truly indebted to them. My gratitude also extends to my family, younger
-                    brother, and friends for their unwavering support, encouragement, and invaluable insights that have
+                    role in my growth, and I am truly indebted to them. My gratitude also extends to my family, my
+                    brothers, and friends for their unwavering support, encouragement, and invaluable insights that have
                     helped me navigate life's challenges. Their guidance has been a cornerstone in my personal and
                     professional development, and I will forever cherish the significant impact they've had on my
                     journey.</p>
