--- a/contact.html
+++ b/contact.html
@@ -56,10 +56,9 @@
             </div>
             <div class="lg:w-1/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
                 <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Feedback</h2>
-                <p class="leading-relaxed mb-5 text-gray-600">Hi there! Your feedback means a lot to me. If you could
-                    take just a minute to share your thoughts about your experience, it would be greatly appreciated.
-                    Your insights help me improve and serve as motivation for continual growth. Thanks for being a part
-                    of making things better!</p>
+                <p class="leading-relaxed mb-5 text-gray-600">Hi there! Your feedback is invaluable to me. Could you
+                    take a moment to share your thoughts about your experience? Your insights will help me to improve
+                    it. Thanks for your support!</p>
                 <!-- <div class="relative mb-4">
                     <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
                     <input type="text" id="name" name="name"
