--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </h1>
                 <p class="mb-10 leading-relaxed">Hello there! I'm a passionate learner, and proficient coder. Currently,
                     I contribute my skills and expertise as a software developer at
-                    <a href="https://www.bennysave.com/" style="color: blue; text-decoration: underline;"
+                    <a href="https://www.appbenny.com/about" style="color: blue; text-decoration: underline;"
                         target="_blank">Benny</a>
 
                     <!-- <a href=https://ankitpsamrat.netlify.app/" style="color: blue; text-decoration: underline; "
